# pc_monitoring

./: README.MD  console.py  main.py  monitoring.py  pyproject.toml  setup.py
.github/workflows/: build.old  build.yml  linux_build.yml  windows_build.yml
pc_monitoring/: client.py  monitoring.py  my_socket.py  type_data.py
requirements/: default.txt  linux.txt  windows.txt
src/pc_monitoring/: example.py  monitoring.py
src/socket_monitoring/: monitoring.py
test/: test_client.py  test_server.py
tests/: test_client.py  test_server.py
